[package]
name = "plog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.23"
lazy_static = "1.4.0"
mimalloc = "0.1.29"
regex = "1.5.5"
tracing = { version = "0.1.34", features = ["log", "attributes", "std"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "fmt", "env-filter"] }
